<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">A²R</string>
    <string name="app_name_full">Addicted²Random Client</string>
    <string name="logo_description">Addicted²Random Logo</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_control_grid">ControlGrid</string>
    <string name="title_sessions_spinner">Sessions</string>
    <string name="title_activity_bookmark_edit">Edit bookmark</string>
    <string name="action_settings">Settings</string>
    <string name="connection_closed">Connection closed.</string>

    <!-- Errors -->
    <string name="layout_error">Error loading layout.</string>

    <!-- Validation -->
    <string name="invalid_uri">Invalid URI</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Not connected dialog -->
    <string name="not_connected_title">Can not connect</string>
    <string name="not_connected_message">No active network connection found.</string>
    <string name="not_connected_retry">Retry</string>
    <string name="not_connected_open_network_settings">Network settings</string>

    <!-- About -->
    <string name="title_activity_about">About</string>
    <string name="about_app_version">Version 1.0.0 Beta</string>
    <string name="about_copyright">© 2013 Alexander Jentz</string>
    <string name="about_author_url">http://beyama.de</string>
    <string name="about">
			This software was created as part of the <a href="http://addicted2random.eu">Addicted2Random project</a>.\n
			It is released under the MIT license and its sources are available under 
      <a href="https://github.com/beyama/android-a2r-client">github.com/beyama/android-a2r-client</a>.
    </string>
    <string name="about_credits_title">Credits:</string>
    <string name="about_credits">
			JavaOSC\n
			© 2002-2006, C. Ramakrishnan / Illposed Software\n
			\n
			Netty\n
			© 2011 The Netty Project
    </string>

</resources>