<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="196dp"
            android:layout_height="196dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/a2r" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name_full"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_centerHorizontal="true"
            android:text="@string/about_app_version"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/version"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/about_copyright"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/author_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/copyright"
            android:layout_centerHorizontal="true"
            android:text="@string/about_author_url"
            android:textAlignment="center"
            android:textSize="12sp"
            android:autoLink="web" />
        
        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@id/author_url"
            android:text="@string/about"
            android:textSize="12sp" />
        
        <TextView
            android:id="@+id/credits_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@id/about"
            android:text="@string/about_credits_title"
            android:textColor="@android:color/white" />
        
        <TextView
            android:id="@+id/credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/credits_title"
            android:text="@string/about_credits"
            android:textSize="12sp" />
    </RelativeLayout>

</ScrollView>